chore: migrate from JUnit 4 to JUnit 5 and upgrade to Java 17 (#184)
Migrate the project from JUnit 4 to JUnit 5 and raise the Java
runtime baseline to Java 17.

Also upgrade the Kafka base image to 4.0.2 and align the Dockerfile
structure with the sink repository for consistency and maintainability.

Signed-off-by: Joel Hanson <17215044+Joel-hanson@users.noreply.github.com>